arch-power: Add multi-mode debugging support
This adds multi-mode support for remote debugging via GDB
with the addition of the XML target description files for
both 32-bit and 64-bit variants of the Power architecture.
Proper byte order conversions have also been added.

Since, MSR has now been modeled to some extent, it is also
exposed by getRegs() but setRegs() does not modify it.
Similarly, the target descriptions require FPSCR to also
be part of the payload and hence, it has been added too.

Change-Id: I156fdccb791f161959dbb2c3dd8ab1e510d9cd4b
Signed-off-by: Sandipan Das <sandipan@linux.ibm.com>

--- a/src/arch/power/SConscript
+++ b/src/arch/power/SConscript
@@ -58,4 +58,8 @@ if env['TARGET_ISA'] == 'power':
 
     ISADesc('isa/main.isa')
 
-    GdbXml('power.xml', 'gdb_xml_power')
+    GdbXml('rs6000/power-core.xml', 'gdb_xml_power_core')
+    GdbXml('rs6000/power64-core.xml', 'gdb_xml_power64_core')
+    GdbXml('rs6000/power-fpu.xml', 'gdb_xml_power_fpu')
+    GdbXml('rs6000/powerpc-32.xml', 'gdb_xml_powerpc_32')
+    GdbXml('rs6000/powerpc-64.xml', 'gdb_xml_powerpc_64')
